...
                            <constraint firstItem="xe8-ab-8iy" firstAttribute="centerY" secondItem="wak-1s-yOE" secondAttribute="centerY" id="qbD-dc-xwS"/>
                            <constraint firstItem="LQi-uu-Rg6" firstAttribute="leading" secondItem="wak-1s-yOE" secondAttribute="leadingMargin" id="sMI-82-ZUK"/>
                            <constraint firstItem="Xf3-p6-ayd" firstAttribute="leading" secondItem="XEz-nK-hCG" secondAttribute="leading" id="trL-mf-uz5"/>
                            <constraint firstItem="xe8-ab-8iy" firstAttribute="centerX" secondItem="wak-1s-yOE" secondAttribute="centerX" id="zwh-WN-gc9"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Profile" id="3Yq-BZ-KO7"/>
                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                    <connections>
                        <outlet property="avatar" destination="LQi-uu-Rg6" id="mqm-gb-8wY"/>
                        <outlet property="editButton" destination="ciN-g3-Om9" id="qM3-ux-06c"/>
                        <outlet property="profileMapView" destination="xe8-ab-8iy" id="BTO-5V-szx"/>
                        <outlet property="signNumberLabel" destination="XEz-nK-hCG" id="3dG-PK-ICL"/>
...
            <point key="canvasLocation" x="404" y="485"/>
        </scene>
        <!--Navigation Controller-->
        <scene sceneID="y1g-V6-ZAS">
            <objects>
                <navigationController storyboardIdentifier="ProfileEntry" automaticallyAdjustsScrollViewInsets="NO" modalPresentationStyle="fullScreen" useStoryboardIdentifierAsRestorationIdentifier="YES" id="hqE-vd-yUI" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="" image="person" catalog="system" id="jW6-Vc-X70"/>
                    <toolbarItems/>
                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" largeTitles="YES" id="upR-ms-WeS">
                        <rect key="frame" x="0.0" y="44" width="428" height="96"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
...
