...
class SignCreationViewController: UIViewController, UIPickerViewDelegate, UIPickerViewDataSource {
    
    let library = SignLibrary()
    var documents = [QueryDocumentSnapshot]()
    var signText = ""
    var signTextColour = UIColor.white
    var user = Auth.auth().currentUser
    var locManager = CLLocationManager()
    var colourSelection: [String] = [String]()
    @IBOutlet weak var colourWheel: UIPickerView!
    @IBOutlet weak var signTextField: UITextField!
    @IBOutlet weak var submit: UIButton!
    
...
